updated the home screens for each sprint

--- a/app/views/sprint1.html
+++ b/app/views/sprint1.html
@@ -11,32 +11,48 @@
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
 
       <h2 class="heading-large">Alpha sprint 1</h2>
+  
       <p>Created mid May 2016</p>
+  
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
         <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
-      <ul>
-        <li><span class="strong">What we tested: </span> </li>
-        <li>Full end to end journey for a pensioner who has a state and a private pension, rents their home and pays council tax. </li>
-        <li>This pensioner has full entitlement and there are no others in household, no benefits.</li>
+  
+      <br>
+  
+      <h3><span class="strong">What we tested: </span> </h3>
+  
+      <ul class="list list-bullet">
+        <li>Full end to end journey for Bill persona.</li>
+        <li>Bill has a state pension, private pension, rents his home and pays council tax. </li>
+        <li>No others in household, no benefits.</li>
+        <li>Bill has full entitlement.</li>
       </ul>
-      <ul>
-        <li><span class="strong">What we found: </span></li> 
+  
+      <br>
+  
+      <h3><span class="strong">What we found: </span> </h3>
+  
+      <ul class="list list-bullet">
         <li>Overall, users found this easy to use.</li> 
         <li>Biggest issues were around:</li> 
         <li>1) known issues below</li>
         <li>2) didn’t feel like they had finished at the end,</li>
         <li>3) language, 
-        <li>4) benefit questions</li> 
+        <li>4) benefit questions.</li> 
         <li>Users want clearer info around what part of their rent they need to tell us about, if they get help towards it.</li>
         <li>They need clearer feedback that the application has been submitted and what the next steps are. </li>
         <li>Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.</li>
       </ul>
-      <ul>
-        <li><span class="strong">Known issues: </span></li>
+  
+      <br>
+  
+      <h3><span class="strong">Known issues: </span> </h3>
+  
+      <ul class="list list-bullet">
         <li>No error messages in the prototype.</li>
         <li>No feedback when sections are done.</li>
         <li>Uses dummy data on summary screens.</li>
