--- a/app/views/sprint2.html
+++ b/app/views/sprint2.html
@@ -21,17 +21,22 @@
         <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
+  
       <br>
+  
       <h3><span class="strong">What we plan to test: </span> </h3>
       
       <ul class="list list-bullet">
-        <li>Full end to end journey for a pensioner who has a state, private pension or both.</li>
-        <li>Lives in their own home and pays council tax. </li>
-        <li>Has a non-dependant son living in the household, no benefits.</li>
+        <li>Full end to end journey for Miriam persona</li>
+        <li>Miriam has a private pension</li>
+        <li>Lives in her own home and pays council tax. </li>
+        <li>Has a non-dependant son living in the household</li>
         <li>No benefits.</li>
-        <li>This pensioner has some entitlement</li>
+        <li>Miriam has some entitlement</li>
       </ul>
+  
       <br>
+  
       <h3><span class="strong">What we changed: </span> </h3>
      
       <ul class="list list-bullet">
