--- a/app/views/sprint5.html
+++ b/app/views/sprint5.html
@@ -9,7 +9,9 @@
   <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
   <h2 class="heading-large">Alpha sprint 5</h2>
+  
   <p>Created 28 June 2016</p>
+  
   <ul>
     <li><a href="/lis/5/index">Start page</a></li>
     <li><a href="/lis/5/lis-home">My lis home page</a></li>
@@ -18,27 +20,42 @@
     <li><a href="/lis/5/register/user-id">Save and restore version A</a></li>
   </ul>
 
-  <h2 class="heading-large">Exemption prototypes</h2>
-  <ul>
-    <!--li><a href="/lis/5/exemption/hc3-home">Exemption management page</a></li-->  
+  <br>
+  
+  <h3><span class="strong">Exemption prototypes</span> </h3>
+      
+  <ul class="list">
     <li><a href="/lis/5/exemption/certificate">Exemption management page</a></li>  
-    <li><a href="/lis/5/exemption/hc2certificate">HC2 certificate</a></li>  
-    <li><a href="/lis/5/exemption/hc3certificate">HC3 certificate</a></li>
-    <li><a href="/lis/5/exemption/email">Email certificate</a></li>
+    <li><a href="/../public/images/breakdown.pdf">Breakdown (pdf)</a></li>
+    <!--<li><a href="/lis/5/exemption/hc2certificate">HC2 certificate</a></li>--> 
+    <!--<li><a href="/lis/5/exemption/hc3certificate">HC3 certificate</a></li>-->
+    <!--<li><a href="/lis/5/exemption/email">Email certificate</a></li>-->
   </ul>
   
-  <ul>
-    <li><span class="strong">What we're improving this sprint:</span> </li>
+  <br>
+  
+  <h3><span class="strong">What we plan to test: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>Updated exemption pages and journey.</li>
+    <li>Users understanding of the breakdown.</li>
+  </ul>
+  
+  <br>
+  
+  <h3><span class="strong">What we changed: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>Added new exemption page where users could manage their exemption (print, download, amend, etc)</li>
     <li>Edited the journey for people living at home who are in education.</li>
   </ul>
 
-  <ul>
-    <li><span class="strong">What we plan to test:</span> </li>
-    <li>Updated exemption pages and journey.</li>
-  </ul>
+  <br>
+  
+  <h3><span class="strong">What we found: </span> </h3>
 
-  <ul>
-    <li><span class="strong">What we found:</span> </li>
+  <ul class="list list-bullet">
+    <li>Users don't understand 2 step verification</li>
   </ul>
 
 </main>
