--- a/app/views/sprint6.html
+++ b/app/views/sprint6.html
@@ -13,51 +13,58 @@
   <ul>
     <li><a href="/lis/6/index">Start page</a></li>
     <li><a href="/lis/6/lis-home">My lis home page</a></li>
+    <li><a href="/lis/6/live/others/people">Does anyone else live in your home?</a></li>
+    <!--<li><a href="/lis/6/start-v1">Start page experiment</a></li>-->
     <li><a href="/lis/6/signin-continue">Returning after leaving</a></li>
     <li><a href="/lis/6/signin">Returning after completing</a></li>
   </ul>
-    <p>Summary pages:</p>
-    <ul>
-    <li><a href="/lis/6/you/about-you-summary">About you</a></li>
-    <li><a href="/lis/6/partner/summary">Partner status</a></li>
-    <li><a href="/lis/6/assets/assets-summary">Property, savings and money</a></li>
-    <li><a href="/lis/6/live/living-summary">About where you live</a></li>
-    </ul>
 
-    <p>Outcome:</p>
-    <ul>
-     <li><a href="/lis/6/part-help">Part help</a></li>
+  <br>
+  
+  <h3><span class="strong">Outcomes: </span> </h3>
+  
+  <ul class="list">
+    <li><a href="/lis/6/part-help">Part help</a></li>
     <li><a href="/lis/6/full-help">Full help</a></li>
-    </ul>
+  </ul>
     
-    <p>Other:</p>
-    <ul>
-     <li><a href="/lis/6/live/others/people">Does anyone else live in your home?</a></li>
-        <li><a href="/lis/6/start-v1">Start page experiment</a></li>
-    
-    </ul>
+  <br>
+  
+  <h3><span class="strong">Exemption prototypes: </span> </h3>
 
-  <h2 class="heading-large">Exemption prototypes</h2>
-  <ul>
+  <ul class="list">
     <li><a href="/lis/6/exemption/hc3-entitlement">HC3 entitlement management page</a></li>  
     <li><a href="/lis/6/exemption/hc2-entitlement">HC2 entitlement management page</a></li>  
     <li><a href="/lis/6/exemption/hc3-breakdown">HC3 breakdown page</a></li>  
-    <!--li><a href="/lis/6/exemption/certificate">Exemption management page</a></li-->  
-    <!--li><a href="/lis/6/exemption/hc2certificate">HC2 certificate</a></li-->  
-    <!--li><a href="/lis/6/exemption/hc3certificate">HC3 certificate</a></li-->
-    <!--li><a href="/lis/6/exemption/email">Email certificate</a></li-->
   </ul>
   
-  <ul>
-    <li><span class="strong">What we're improving this sprint:</span> </li>
+  <br>
+  
+  <h3><span class="strong">What we plan to test: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>We're testing with users who have an email address and have basic digital skills to use the online service.</li>
+    <li>We're asking users to print a copy of the HC3 entitlement and bring it with them.</li>
   </ul>
 
-  <ul>
-    <li><span class="strong">What we plan to test:</span> </li>
+  <br>
+  
+  <h3><span class="strong">What we've changed: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>Refined the entitlement pages.</li>
+    <li>Refined the journey for application number &amp; memorable word.</li>
   </ul>
 
-  <ul>
-    <li><span class="strong">What we found:</span> </li>
+  <br>
+  
+  <h3><span class="strong">What we found: </span> </h3>
+  
+  <ul class="list list-bullet">
+      <li>Some users didn't realise didn't they needed to go to their entitlement <a href="/lis/6/part-help">here</a>.</li>
+      <li>Users were able to get through the service.</a></li>
+      <li>Users with ISA's would like to see the term used so they know where to enter the information.</a></li>
+      <li>Users are confused about benefits, pension credit can be a stumbling point.</a></li>
   </ul>
 
 </main>
