--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -9,7 +9,7 @@
   <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
   <h2 class="heading-large">Alpha sprint 7</h2>
-  <p>Created 28 June 2016</p>
+  <p>Created 8 August 2016</p>
   <ul>
     <li><a href="/lis/7/index">Start page</a></li>
     <li><a href="/lis/7/lis-home">My lis home page</a></li>
@@ -20,22 +20,54 @@
     <li><a href="/lis/7/signin">Returning after completing</a></li>
     <!--li><a href="/lis/7/register/user-id">Save and restore version A</a></li-->
   </ul>
-
-  <h2 class="heading-large">Exemption prototypes</h2>
-  <ul>
+  
+  <br>
+  
+  <h3><span class="strong">Exemption prototypes:</span> </h3>
+      
+  <ul class="list">
     <li><a href="/lis/7/exemption/hc3-entitlement">HC3 entitlement management page</a></li>  
     <li><a href="/lis/7/exemption/hc2-entitlement">HC2 entitlement management page</a></li>  
     <li><a href="/lis/7/exemption/hc3-breakdown">HC3 breakdown page</a></li>  
-    <!--li><a href="/lis/7/exemption/certificate">Exemption management page</a></li-->  
-    <!--li><a href="/lis/7/exemption/hc2certificate">HC2 certificate</a></li-->  
-    <!--li><a href="/lis/7/exemption/hc3certificate">HC3 certificate</a></li-->
-    <!--li><a href="/lis/7/exemption/email">Email certificate</a></li-->
   </ul>
   
-  <ul>
-    <li><span class="strong">What we're improving this sprint:</span> </li>
+  <br>
+  
+  <h3><span class="strong">Summary pages:</span> </h3>
+
+  <ul class="list">
+    <li><a href="/lis/7/you/about-you-summary">About you</a></li>
+    <li><a href="/lis/7/partner/summary">Partner status</a></li>
+    <li><a href="/lis/7/assets/assets-summary">Property, savings and money</a></li>
+    <li><a href="/lis/7/live/living-summary">About where you live</a></li>
+  </ul>
+  
+  <br>
+  
+  <h3><span class="strong">What we plan to test: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>We're improving the exemption journey and planning to break it up so that each part delivers a specific user need. Rather than trying to meet all of the needs on one screen (we think this is confusing). Each page should have a clear purpose like 'get a copy of my exemption'.</li>
   </ul>
 
+  <br>
+  
+  <h3><span class="strong">What we've changed: </span> </h3>
+
+  <ul class="list list-bullet">
+    <li>Refined the entitlement pages.</li>
+    <li>Refined the journey for application number &amp; memorable word.</li>
+  </ul>
+
+  <br>
+  
+  <h3><span class="strong">What we found: </span> </h3>
+  
+  <ul class="list list-bullet">
+      <li>Testing August 2016</a></li>
+  </ul>
+
+  
 </main>
 
 {% endblock %}
