--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -11,31 +11,44 @@
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
 
       <h2 class="heading-large">Alpha sprint 3</h2>
+  
       <p>Created 9 June 2016</p>
+  
       <ul>
         <li><a href="/lis/3/index">Start page</a></li>
         <li><a href="/lis/3/lis-home">My lis home page</a></li>
         <li><a href="/lis/3/part-help">Part help outcome</a></li>
       </ul>
-      <ul>
-        <li><span class="strong">What we plan to test:</span> </li>
-        <li>Full end to end journey for a couple who have a state pension and a private pension.</li>
+  
+      <br>
+  
+      <h3><span class="strong">What we plan to test: </span> </h3>
+      
+      <ul class="list list-bullet">
+        <li>Full end to end journey for Mr &amp; Mrs Mattu persona.</li>
+        <li>Have a state pension and a private pension.</li>
         <li>They receive benefits.</li>
         <li>They live in their own home and have no mortgage. They pay council tax.</li>
-        <li>This couple would have part entitlement.</li>
-      </ul>
-
-      <ul>
-        <li><span class="strong">What we changed:</span> </li>
-        <li>Partner questions have been added</li>
-        <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages and situation</li>
-        <li>Added functionality to allow users to tell us they have Premium Bonds, and the value of them</li>
-        <li>Specific questions about benefits have been added including combinations</li>
-        <li>A first pass at save and restore account functionality has been created</li>
+        <li>Mr &amp; Mrs Mattu would have part entitlement.</li>
       </ul>
   
-      <ul>
-        <li><span class="strong">What we found:</span> </li>
+      <br>
+  
+      <h3><span class="strong">What we changed: </span> </h3>
+      
+      <ul class="list list-bullet">
+        <li>Partner questions have been added.</li>
+        <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages and situation.</li>
+        <li>Added functionality to allow users to tell us they have Premium Bonds, and the value of them.</li>
+        <li>Specific questions about benefits have been added including combinations.</li>
+        <li>A first pass at save and restore account functionality has been created.</li>
+      </ul>
+  
+      <br>
+  
+      <h3><span class="strong">What we found: </span> </h3>
+      
+      <ul class="list list-bullet">
         <li>On the <a href="lis/3/part-help">done screen</a> customers want the information about eye care help to be to the point like the explanations for other types of help.</li>
         <li>We tested some pages with a blind user using the JAWS screen reader, the mark up was quite good with some issues. The user liked the short to the point pages and was able to answer the questions presented to her.</li>
       </ul>
