--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -20,27 +20,39 @@
         <li><a href="/lis/4/register/user-id">Save and restore version A</a></li>
       </ul>
 
-      <h2 class="heading-large">Exemption prototypes</h2>
-      <ul>
+      <br>
+  
+      <h3><span class="strong">Exemption prototypes</span> </h3>
+      
+      <ul class="list">
         <li><a href="/lis/4/exemption/hc2certificate">HC2 Certificate</a></li>  
         <li><a href="/lis/4/exemption/hc3certificate">HC3 Certificate</a></li>
         <li><a href="/lis/4/exemption/email">Email Certificate</a></li>
       </ul>
+
+      <br>
+  
+      <h3><span class="strong">What we plan to test:</span> </h3>
       
-      <ul>
-        <li><span class="strong">What we plan to test:</span> </li>
+      <ul class="list list-bullet">
         <li>Full end to end journey for a single person or couple.</li>
         <li>They may receive benefits.</li>
         <li>They may live in their own home or rent.</li>
         <li>We will test savings, children living at home, a friend living at home.</li>
       </ul>
 
-      <ul>
-        <li><span class="strong">What we're improving this sprint:</span> </li>
+      <br>
+  
+      <h3><span class="strong">What we changed:</span> </h3>
+      
+      <ul class="list list-bullet">
         <li>Questions have been improved about others in the home.</li>
       </ul>
+
+      <br>
+  
+      <h3><span class="strong">What we found:</span> </h3>
       
-      <p><span class="strong">What we found:</span></p>
       <ul class="list list-bullet">
         <li>Users we tested with (low digital skills) found the sign in confusing. They seemed to be more inclined to use a memorable word.</li>
         <li>They were overwhelmed by the <a href="/lis/4/save-continue/ref">sign in pages</a>, there is too much being asked for at once.</li>
