--- a/app/views/lis/6/assets/assets-summary.html
+++ b/app/views/lis/6/assets/assets-summary.html
@@ -19,62 +19,16 @@
     </h1>
 
     <table class="data-table assets-summary">
-        <p><strong>Property and land</strong></p>
       <tr>
-        <td>Do you have any property or land in this country or abroad?</td>
-        <td>Yes</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-      </table>
-      <table class="data-table assets-summary">
-            <p><strong>Property 1</strong></p>
-        <tr>
-        <td>What is the address of this property or land?</td>
-        <td>12 The View, <br>Gateshead,<br>Tyne and wear,<br>NE12345</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>What is the value of the property or land?</td>
-        <td>£5,000</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>How much, if anything, is still owed on the property or land?</td>
-        <td>£4,500</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>Do you or your partner have any other property or land in this country or abroad?</td>
-        <td>Yes</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-      </table>
-    <table class="data-table assets-summary">
-            <p><strong>Property 2</strong></p>
-           <tr>
-        <td>What is the address of this property or land?</td>
-        <td>13 The View, <br>Gateshead,<br>Tyne and wear,<br>NE12345</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>What is the value of the property or land?</td>
-        <td>£6,000</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>How much, if anything, is still owed on the property or land?</td>
-        <td>£2,500</td>
-        <td><a href="property">Change this</a></td>
-      </tr>
-        <tr>
-        <td>Do you or your partner have any of the following in this country or abroad? </td>
+        <td>Do you have any property or land in this country<br>or abroad?</td>
         <td>No</td>
+        <td><a href="property">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Bank, building society or savings accounts</td>
+        <td>Yes</td>
         <td><a href="money">Change this</a></td>
       </tr>
-      </table>
-      
-            <table class="data-table assets-summary">
-        <p><strong>Money, savings and investments</strong></p>
       <tr>
         <td>Total held in bank, building society or savings accounts</td>
         <td>£8000</td>
