--- a/app/views/lis/6/you/email.html
+++ b/app/views/lis/6/you/email.html
@@ -53,10 +53,7 @@
           })
         }}
     
-        <p class="navigation">
-          <a class="cancel" href="hc{{helplevel}}-entitlement">Cancel - back to my entitlement
-          </a>
-        </p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
     </div>
