added personas to the prototype

--- a/app/views/sprint1.html
+++ b/app/views/sprint1.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <main id="content" role="main">
-      <a class="back-link" href="index">Back </a>
+      <a class="back-link" href="index">Back to all prototypes </a>
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
       
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
@@ -26,7 +26,7 @@
       <h3><span class="strong">What we tested: </span> </h3>
   
       <ul class="list list-bullet">
-        <li>Full end to end journey for Bill persona.</li>
+        <li>Full end to end journey for <a href="/lis/personas/bill-persona">Bill persona</a></li>
         <li>Bill has a state pension, private pension, rents his home and pays council tax. </li>
         <li>No others in household, no benefits.</li>
         <li>Bill has full entitlement.</li>
