--- a/app/views/sprint2.html
+++ b/app/views/sprint2.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <main id="content" role="main">
-      <a class="back-link" href="index">Back </a>
+      <a class="back-link" href="index">Back to all prototypes</a>
       
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
       
@@ -14,20 +14,19 @@
       <h2 class="heading-large">Alpha sprint 2</h2>
      
       <p>Created end May 2016</p>
-      
+            
       <ul>
         <li><a href="/lis/2/index">Start page</a></li>
         <li><a href="/lis/2/lis-home">My lis home page</a></li>
         <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
-  
-      <br>
-  
+
+  <br>
       <h3><span class="strong">What we plan to test: </span> </h3>
       
       <ul class="list list-bullet">
-        <li>Full end to end journey for Miriam persona</li>
+        <li>Full end to end journey for <a href="/lis/personas/miriam-persona">Miriam persona</a></li>
         <li>Miriam has a private pension</li>
         <li>Lives in her own home and pays council tax. </li>
         <li>Has a non-dependant son living in the household</li>
