--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <main id="content" role="main">
-      <a class="back-link" href="index">Back </a>
+      <a class="back-link" href="index">Back to all prototypes</a>
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
       
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
@@ -25,7 +25,7 @@
       <h3><span class="strong">What we plan to test: </span> </h3>
       
       <ul class="list list-bullet">
-        <li>Full end to end journey for Mr &amp; Mrs Mattu persona.</li>
+        <li>Full end to end journey for <a href="/lis/personas/mattus-persona">Mr &amp; Mrs Mattu persona</a></li>
         <li>Have a state pension and a private pension.</li>
         <li>They receive benefits.</li>
         <li>They live in their own home and have no mortgage. They pay council tax.</li>
