added wizard journey, along with changes to routes.js  for the journey

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -689,4 +689,12 @@ tr.clickable-row { cursor: pointer; }
     margin-bottom: 0;
   }
 }
+.text-small{
+  line-height: 2rem;
+  font-size: 1.2rem;
+  margin-bottom: 0.37499rem;
+  padding-top: 0.62501rem;
+}
+
+
 
