--- a/app/views/lis/7/email/email_confirm.html
+++ b/app/views/lis/7/email/email_confirm.html
@@ -14,7 +14,6 @@
 
 
 		  	<h1 class="heading-large">
-		  		<span class="heading-secondary">Your tax credits annual review</span>
 		  		Make sure this is right
 		  	</h1>
 
@@ -28,13 +27,10 @@
   <input tabindex="5" class="form-control" value={{email-address}} name="{{email-address}}" id="signature_email" type="email">
 </div>
 
-
- <a href="/renewals/sprint8/income_to_do" class="button">Yes – this is my email address</a>
-
     
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Yes – this is my email address'
       })
     }}
     <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
