added tabbed and stepped hc3 breakdowns

--- a/app/views/lis/7/end/steps/hc3-documents.html
+++ b/app/views/lis/7/end/steps/hc3-documents.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <main id="content" role="main">
- 
+
  <div class="grid-row">
   <div class="column-two-thirds">
 
@@ -18,7 +18,7 @@
       </h1>
     </div>
     </div>
-    
+
 
 
  <div class="grid-row">
@@ -33,7 +33,7 @@
           <div class="column-two-thirds">
     <article>
       <div class="govspeak">
-          <section class="attachment embedded" id="attachment_882329">
+          <section class="attachment embedded" id="attachment_hc3">
   <div class="attachment-thumb">
       <img alt="" src="/public/images/hc3-img-01.png">
   </div>
