--- a/app/views/lis/7/end/steps/view-entitlement.html
+++ b/app/views/lis/7/end/steps/view-entitlement.html
@@ -8,62 +8,70 @@
 {% block content %}
 
 <main id="content" role="main">
-    
+
     <div class="done-panel">
         <p class="lede"><span id="done-tick"> </span><strong>Application submitted</strong> / Reference number: 1Q3 4T6 7K9</p>
   </div>
- 
-  <div class="grid-row">
-    
-    <div class="column-two-thirds">
-         <p class="form-hint">Step 2 of 3</p>
-        <h1 class="heading-large">Step 2: View your entitlements:</h1>
+
+
+ <div class="grid-row">
+  <div class="column-two-thirds">
+
+      <h1 class="heading-large">
+        <span class="heading-secondary">Step 2</span>
+       View your entitlements
+      </h1>
+    </div>
+    </div>
+
+    <div class="grid-row">
+          <div class="column-two-thirds">
         <div class="entitlement" style="margin-top:30px;">
         <h4 class="heading-small">Prescriptions</h4>
         <p class="description">This certificate does not entitle you to free prescriptions.</p>
-      </div>
-      
+              </div>
+
       <div class="entitlement">
         <h4 class="heading-small">Sight tests</h4>
-        <p class="description">Towards a private sight test, you pay a maximum of:</p>	
+        <p class="description">Towards a private sight test, you pay a maximum of:</p>
         <p class="heading-medium">£x.xx</p>
       </div>
-      
+
       <div class="entitlement">
         <h4 class="heading-small">Glasses or contact lenses</h4>
-        <p class="description">Towards an optical voucher, you pay:</p>	
+        <p class="description">Towards an optical voucher, you pay:</p>
         <p class="heading-medium">£x.xx</p>
       </div>
-      
+
       <div class="entitlement">
         <h4 class="heading-small">NHS dental treatment</h4>
-        <p class="description">Per course of treatment, you pay a maximum of:</p>	
+        <p class="description">Per course of treatment, you pay a maximum of:</p>
         <p class="heading-medium">£x.xx</p>
       </div>
-      
+
       <div class="entitlement">
         <h4 class="heading-small">Travel to receive NHS treatment</h4>
-        <p class="description">Towards travel, in a week you pay:</p>	
+        <p class="description">Towards travel, in a week you pay:</p>
         <p class="heading-medium">£x.xx</p>
       </div>
-      
+
       <div class="entitlement">
         <h4 class="heading-small">NHS Wigs, or NHS fabric supports</h4>
-        <p class="description">Per prescribed item you pay a maximum of:</p>	
+        <p class="description">Per prescribed item you pay a maximum of:</p>
         <p class="heading-medium">£x.xx</p>
       </div>
-        
+
         <p>
           <a class="button" href="hc3-entitlement-v2" id="next">Get your certificate</a>
         </p>
-      
-      
+
+
     </div>
-    
+
     <div class="column-third">
-      
+
       <div style="margin-top:135px;">
-        
+
         <div>
           <h3 class="heading-small">How was this worked out</h3>
             <p><a href="hc3-breakdown">View a breakdown</a></p>
@@ -74,12 +82,12 @@
             <h3 class="heading-small">How do I use my certificiate</h3>
           <p><a href="#">Get help using your certificate</a></p>
         </div>
-      
+
       </div>
-        
-         
+
+
     </div>
-    
+
   </div>
-  
+
 </main>
