added bills persona

--- a/app/views/lis/personas/bill-persona.html
+++ b/app/views/lis/personas/bill-persona.html
@@ -14,7 +14,13 @@
     <h1 class="heading-xlarge">Low Income Scheme<br>Sprint 2 - Bill persona</h1>
 
       <p>
-        
+        My name is Bill and I am 70. I live on my own in Newcastle. 
+      </p>
+      <p>
+        I have a state pension and a small work pension which barely cover my rent and council tax. 
+      </p>
+      <p>
+        I would like help to pay for the cost of Dental treatment and glasses. I was told about the Low income Scheme and I would like to apply to see if I can get help.
       </p>
 
     </div>
