--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -2355,3 +2355,41 @@ tr.clickable-row {
   font-size: 1.2rem;
   margin-bottom: 0.37499rem;
   padding-top: 0.62501rem; }
+
+.tab-nav {
+  border-bottom: 1px solid #ccc;
+  padding: 0;
+  margin: 0.75em 0;
+  display: flex; }
+
+.tab-nav .tab {
+  display: inline-block;
+  padding: 12px 20px;
+  font-size: 24px;
+  font-weight: 700;
+  position: relative; }
+
+.tab-nav .tab.selected {
+  border: 1px solid #ccc;
+  border-bottom: none;
+  padding: 12px 19px 13px 19px;
+  background: #fff;
+  text-decoration: none;
+  color: #000;
+  margin-bottom: -1px;
+  line-height: 28px;
+  font-weight: 700; }
+
+.tab-nav a {
+  background-color: #dee0e2;
+  border: 0;
+  margin: 0.25em 0.25em 0.25em 0;
+  padding: 0.45em;
+  text-decoration: none;
+  border-bottom: 10px solid #0072C6; }
+
+.tab-nav a:hover {
+  background-color: #0072C6;
+  color: white;
+  transition: .25s ease-in;
+  border-bottom: 10px solid white; }
