--- a/app/views/lis/7/end/tabs/view-entitlement-accordian.html
+++ b/app/views/lis/7/end/tabs/view-entitlement-accordian.html
@@ -14,10 +14,8 @@
 <div class="done-panel">
     <h2 class="heading-medium"><span id="done-tick"> </span>Application complete</h2>
     <h1 class="heading-large">You can get partial help with health costs</h1>
-<!--
     <h4 class="heading-small">Your certificate is valid for</h4>
     <h2 class="heading-large">6 months</h2>
--->
   </div>
 
   <nav class="tab-nav">
@@ -52,19 +50,22 @@
             <h2 class="subsection__title"><a class="subsection__link">
                     Sight tests
                   </a></h2>
-            <p class="description subsection__description"> Towards a private sight test, you pay a maximum of: </p>
-             <p class="heading-medium">£x.xx</p>
+                              <p class="subsection__description">
+            <div><p class="" style="width:80%; float:left">Towards a private sight test, you pay a maximum of:</p> <p class="heading-medium" style="width:20%; float:right; margin: -8px 0 0 0">£x.xx</p></div>
+            <br><br>
               <a href="">How to use this certificate for sight tests</a></div>
         </div>
 
         <div class="subsection">
           <div class="subsection__header">
             <h2 class="subsection__title"><a class="subsection__link">
-                  Glasses or contact lenses
-                </a></h2>
-            <p class="description subsection__description"> Towards an optical voucher, you pay: </p>
-            <p class="heading-medium">£x.xx</p>
-            <a href="">How to use this certificate for glasses or contact lenses</a>
+            Glasses or contact lenses</a></h2>
+            <div class="inline-howmuch">
+            <p class="howmuch-left">Towards an optical voucher, you pay:</p>
+            <p class="heading-medium howmuch-right">£x.xx</p>
+            </div>
+            <br><br>
+            <div><a class="howtolink">How to use this certificate for glasses or contact lenses</a></div>
             </div>
         </div>
 
@@ -104,8 +105,9 @@
               NHS Wigs, or NHS fabric supports
              </a>
             </h2>
-            <p class="description subsection__description">Per prescribed item you pay a maximum of: </p>
-            <p class="heading-medium">£x.xx</p>
+                        <p class="subsection__description">
+            <div><p class="" style="width:80%; float:left">Per prescribed item you pay a maximum of: </p> <p class="heading-medium" style="width:20%; float:right; margin: -8px 0 0 0">£x.xx</p></div>
+            <br><br>
             <a href="">How to use this certificate for wigs or fabric supports</a> </div>
         </div>
 
@@ -122,14 +124,16 @@
 
   <div class="column-two-thirds">
     <h1 class="heading-large">Get your certificate</h1>
-    <div class="summary">
-     <div class="panel panel-border-wide">
+
+      <div class="summary" style="">
+     <div class="panel-smaller panel-border-wide">
           <p class="">You will need to show a copy of this information whenever you want to use it </p>
       </div>
     </div>
   </div>
 
   <div class="column-two-thirds">
+         <p class=""><img class="" style="margin-right:10px" src="/public/images/icon_email.png" alt="">Your  certificate has been emailed to <span style="font-weight:700" id="emailAddress">vinay.mattu@inter.net</span></p>
     <article>
       <div class="govspeak">
         <section class="attachment embedded" id="attachment_hc3">
@@ -137,6 +141,10 @@
           </div>
 
           <div class="attachment-details">
+
+
+                      <p class="links"><span class="download"><a href="">
+                <strong>Email (another) copy</strong></a></span></p>
 
             <p class="links"><span class="download">
           <a href=""> <strong>Print</strong></a>
@@ -146,16 +154,14 @@
             <strong>Download PDF</strong>
             9.97KB</a></span></p>
 
-            <p class="links"><span class="download"><a href="">
-                <strong>Email (another) copy</strong></a></span></p>
+
           </div>
 
         </section>
       </div>
     </article>
   </div>
-</div>
-
+    </div>
               <!--tab 3-->
   <div id="breakdown" class="details-block">
 
