--- a/public/stylesheets/accordian.css
+++ b/public/stylesheets/accordian.css
@@ -291,3 +291,12 @@ main {
 .govuk-related-items li {
   margin-bottom: 10px;
   list-style-type: none; }
+
+.howmuch-left {
+  width: 80%;
+  float: left; }
+
+.howmuch-right {
+  width: 20%;
+  float: right;
+  margin: -8px 0 0 0; }
