--- a/app/assets/sass/accordian.scss
+++ b/app/assets/sass/accordian.scss
@@ -373,3 +373,15 @@ main {
   margin-bottom: 10px;
   list-style-type: none;
 }
+
+.howmuch-left{
+    width:80%;
+    float:left
+}
+
+.howmuch-right{
+    width:20%;
+    float:right;
+    margin: -8px 0 0 0;
+}
+
