--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -164,6 +164,13 @@ p.intro-to-list {
     padding: 0.7894736842em;
     margin-bottom: 0.7894736842em;
 }
+.panel-smaller {
+    clear: both;
+    border-left-style: solid;
+    border-color: #bfc1c3;
+    padding: 0.1em 0.1em 0em  0.7894736842em;
+}
+
 .panel-border-wide {
     border-left-width: 10px;
   }
@@ -653,6 +660,11 @@ tr.clickable-row { cursor: pointer; }
 		padding-bottom:4px
 	}
 }
+
+.callout-box p {
+    margin-bottom: 0.3em;
+}
+
 .attachment {
 	position:relative;
 	padding:15px 0 0 129px
@@ -733,9 +745,17 @@ tr.clickable-row { cursor: pointer; }
     border-bottom: 10px solid #0072C6;
   }
 
-    .tab-nav a:hover {
-  background-color: #0072C6;
-  color: white;
-  transition: .25s ease-in;
-    border-bottom: 10px solid white;}
+  .tab-nav a:hover {
+    background-color: #0072C6;
+    color: white;
+    transition: .25s ease-in;
+    border-bottom: 10px solid white;
+  }
+
+.panel-border-narrow {
+    border-left-style: solid;
+    border-color: #bfc1c3;
+    padding: 0.7894736842em;
+    margin-bottom: 0.7894736842em;
+}
 
