added paper copy and date to tabbed option

--- a/app/views/lis/7/end/tabs/view-entitlement-accordian.html
+++ b/app/views/lis/7/end/tabs/view-entitlement-accordian.html
@@ -47,11 +47,11 @@
 
         <div class="subsection">
           <div class="subsection__header">
-            <h2 class="subsection__title"><a class="subsection__link">
-                    Sight tests
-                  </a></h2>
-                              <p class="subsection__description">
-            <div><p class="" style="width:80%; float:left">Towards a private sight test, you pay a maximum of:</p> <p class="heading-medium" style="width:20%; float:right; margin: -8px 0 0 0">£x.xx</p></div>
+            <h2 class="subsection__title"><a class="subsection__link">Sight tests</a></h2>
+                <p class="subsection__description">
+            <div>
+                <p class="" style="width:80%; float:left">Towards a private sight test, you pay a maximum of:</p> <p class="heading-medium" style="width:20%; float:right; margin: -8px 0 0 0">£x.xx</p>
+            </div>
             <br><br>
               <a href="">How to use this certificate for sight tests</a></div>
         </div>
@@ -125,11 +125,9 @@
   <div class="column-two-thirds">
     <h1 class="heading-large">Get your certificate</h1>
 
-      <div class="summary" style="">
-     <div class="panel-smaller panel-border-wide">
-          <p class="">You will need to show a copy of this information whenever you want to use it </p>
-      </div>
-    </div>
+     <div class="callout-box">
+       <p>You will need to show a copy of this information whenever you want to use it.</p>
+     </div>
   </div>
 
   <div class="column-two-thirds">
@@ -143,16 +141,19 @@
           <div class="attachment-details">
 
 
-                      <p class="links"><span class="download"><a href="">
+                      <p class="links"><span class="download"><a href="../../exemption/email-me?helplevel=3">
                 <strong>Email (another) copy</strong></a></span></p>
 
             <p class="links"><span class="download">
-          <a href=""> <strong>Print</strong></a>
+          <a href="javascript:window.print();"> <strong>Print</strong></a>
           </span></p>
 
-            <p class="links"> <span class="download"><a href="">
+            <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
             <strong>Download PDF</strong>
             9.97KB</a></span></p>
+
+            <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
+            <strong>Request a paper copy</strong></a></span></p>
 
 
           </div>
