--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -49,6 +49,10 @@
   <ul class="list list-bullet">
     <li>We're improving the exemption journey and planning to break it up so that each part delivers a specific user need. Rather than trying to meet all of the needs on one screen (we think this is confusing). Each page should have a clear purpose like 'get a copy of my exemption'.</li>
   </ul>
+    <ul class="list">
+    <li><a href="/lis/7/end/tabs/view-entitlement-accordian">entitlement- tabs</a></li>
+        <li><a href="">entitlement- steps</a></li>
+    </ul>
 
   <br>
   
