--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -759,3 +759,12 @@ tr.clickable-row { cursor: pointer; }
     margin-bottom: 0.7894736842em;
 }
 
+.info-panel {
+    padding: 20px 20px 20px 60px;
+    font-weight: bold;
+    background: #0072C6;
+    text-align: left;
+    color: white;
+    margin-bottom: 5px;
+}
+
